--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             <div class="card-body">
                 <h5 class="card-title">Nysnyl</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="{{ url_for('player_character', pc_id='nysnyl') }}" class="btn btn-primary">See info</a>
+                <a href="{{ url_for('player_character', pc_id='Nysnyl') }}" class="btn btn-primary">See info</a>
             </div>
         </div>
 
@@ -18,7 +18,7 @@
             <div class="card-body">
                 <h5 class="card-title">Arilys</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="{{ url_for('player_character', pc_id='Arilys') }}" class="btn btn-primary">See info</a>
             </div>
         </div>
 
@@ -27,7 +27,7 @@
             <div class="card-body">
                 <h5 class="card-title">Roku</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="{{ url_for('player_character', pc_id='Roku') }}" class="btn btn-primary">See info</a>
             </div>
         </div>
 
@@ -36,7 +36,7 @@
             <div class="card-body">
                 <h5 class="card-title">Aribis</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="{{ url_for('player_character', pc_id='Aribis') }}" class="btn btn-primary">See info</a>
             </div>
         </div>
     </div>
