--- a/templates/player_character.html
+++ b/templates/player_character.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} {{ post['title'] }} {% endblock %}</h2>
-    <span class="badge badge-primary">{{ post['created'] }}</span>
-    <p>{{ post['content'] }}</p>
+    <h2>{% block title %} {{ character['name'] }} {% endblock %}</h2>
+    <span class="badge badge-primary">{{ character['race'] }}</span>
+    <p>{{ character['desc'] }}</p>
 {% endblock %}
