--- a/templates/base.html
+++ b/templates/base.html
@@ -19,12 +19,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
       <ul class="navbar-nav">
-          <li class="nav-item active">
+          <li class="nav-item">
               <a class="nav-link" href="{{ url_for('about') }}">About</a>
           </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Characters
           </a>
           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
               <li><a class="dropdown-item" href="{{ url_for('about') }}">About</a></li>
@@ -32,6 +32,19 @@
               <li><a class="dropdown-item" href="{{ url_for('get_all_characters') }}">All Characters</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="{{ url_for('add_character') }}">Add a character</a></li>
+          </ul>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Locations
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+              <li><a class="dropdown-item" href="{{ url_for('bonk') }}">Trollskull Manor</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('bonk') }}">Yawning Maw</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('bonk') }}">All Locations</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="{{ url_for('bonk') }}">Add a location</a></li>
           </ul>
         </li>
       </ul>
