--- a/templates/player_character.html
+++ b/templates/player_character.html
@@ -3,5 +3,8 @@
 {% block content %}
     <h2>{% block title %} {{ character['name'] }} {% endblock %}</h2>
     <span class="badge badge-primary">{{ character['race'] }}</span>
-    <p>{{ character['desc'] }}</p>
+    <div class="row">
+        <p>{{ character['desc'] }}</p>
+        <img src="/static/assets/pixel_{{ character['name'] }}.png" class="img-thumbnail rounded mx-auto d-block" alt="{{ character['name'] }}">
+    </div>
 {% endblock %}
