--- a/templates/create.html
+++ b/templates/create.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>{% block title %} Create a New Post {% endblock %}</h1>
+<h1>{% block title %} Create a New Session Entry {% endblock %}</h1>
 
 <form method="post">
     <div class="form-group">
-        <label for="title">Title</label>
-        <input type="text" name="title"
-               placeholder="Post title" class="form-control"
-               value="{{ request.form['title'] }}"></input>
+        <label for="date">Date</label>
+        <input type="text" name="date"
+               placeholder="Session entry date" class="form-control"
+               value="{{ request.form['date'] }}"></input>
     </div>
 
     <div class="form-group">
