--- a/templates/character_list.html
+++ b/templates/character_list.html
@@ -7,7 +7,7 @@
             <h2>{{ character['name'] }}</h2>
         </a>
         <span class="badge badge-primary">{{ character['race'] }}</span>
-        <a href="{{ url_for('edit', pc_id=character['name']) }}">
+        <a href="{{ url_for('edit_character', pc_id=character['name']) }}">
             <span class="badge badge=warning">Edit</span>
         </a>
         <hr>
