--- a/templates/index.html
+++ b/templates/index.html
@@ -41,12 +41,13 @@
         </div>
     </div>
 
+    <br>
     {% for post in posts %}
         <a href="{{ url_for('post', post_id=post['id']) }}">
             <h2>{{ post['title'] }}</h2>
         </a>
         <span class="badge badge-primary">{{ post['created'] }}</span>
-        <a href="{{ url_for('edit', id=post['id']) }}">
+        <a href="{{ url_for('edit_character', id=post['id']) }}">
             <span class="badge badge=warning">Edit</span>
         </a>
         <hr>
