--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,11 @@
         </li>
 
         <li class="nav-item">
+            {% if current_user.is_anonymous %}
             <a class="nav-link" href="{{ url_for('login') }}">Log in</a>
+            {% else %}
+            <a class="nav-link" href="{{ url_for('logout') }}">Log out</a>
+            {% endif %}
         </li>
 
       </ul>
