edited db models and remigrated; small html changes

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,5 +2,5 @@
 
 {% block content %}
     <h2>{% block title %} About {% endblock %}</h2>
-    <p> This is the about page </p>
+    <p> This is a Flask project website meant to provide a place for information about our ongoing D&D Dragon Heist campaign. </p>
 {% endblock %}
