--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,18 @@
 
     <title>{% block title %} {% endblock %}</title>
   </head>
+
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{ url_for('index')}}">Glass Force</a>
+    <a class="navbar-brand" href="{{ url_for('index')}}">
+        <img src="/static/assets/brand/d&d_logo_amp.png" alt="" width="50" height="50" class="d-inline-block align-center">
+        Glass Force
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
       <ul class="navbar-nav">
           <li class="nav-item">
@@ -58,16 +63,18 @@
               <li><a class="dropdown-item" href="{{ url_for('all_entries') }}">All Entries</a></li>
           </ul>
         </li>
+      </ul>
 
-        <li class="nav-item">
+      <ul class="nav navbar-nav ml-auto">
+          <li class="nav-item">
             {% if current_user.is_anonymous %}
-            <a class="nav-link" href="{{ url_for('login') }}">Log in</a>
+            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
             {% else %}
-            <a class="nav-link" href="{{ url_for('logout') }}">Log out</a>
+            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
             {% endif %}
         </li>
-
       </ul>
+
     </div>
   </div>
 </nav>
@@ -83,6 +90,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   </body>
 </html>
