renamed character view and moved character html templates

--- a/templates/characters/character_list.html
+++ b/templates/characters/character_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>{% block title %} Character list {% endblock %}</h1>
     {% for character in characters %}
-        <a href="{{ url_for('player_character', pc_id=character['name']) }}">
+        <a href="{{ url_for('view_character', pc_id=character['name']) }}">
             <h2>{{ character['name'] }}</h2>
         </a>
         <span class="badge badge-primary">{{ character['race'] }}</span>
