added locations routes and html templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
               <li><a class="dropdown-item" href="{{ url_for('bonk') }}">Yawning Maw</a></li>
               <li><a class="dropdown-item" href="{{ url_for('bonk') }}">Add a location</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="{{ url_for('bonk') }}">All Locations</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('all_locations') }}">All Locations</a></li>
           </ul>
         </li>
 
