refactored add character form to use FlaskForm

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,6 +78,8 @@
     </div>
   </div>
 </nav>
+
+    {# TODO: adjust alert settings #}
     <div class="container">
         {% for message in get_flashed_messages() %}
             <div class="alert alert-danger">{{ message }}</div>
