added locations to front-page; html templates organization

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
             Characters
           </a>
           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-              <li><a class="dropdown-item" href="{{ url_for('about') }}">About</a></li>
+{#              <li><a class="dropdown-item" href="{{ url_for('about') }}">Player Characters</a></li>#}
               <li><a class="dropdown-item" href="{{ url_for('add_character') }}">Add a character</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="{{ url_for('get_all_characters') }}">All Characters</a></li>
