created an add location form and route

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
               <li><a class="dropdown-item" href="{{ url_for('bonk') }}">Trollskull Manor</a></li>
               <li><a class="dropdown-item" href="{{ url_for('bonk') }}">Yawning Maw</a></li>
-              <li><a class="dropdown-item" href="{{ url_for('bonk') }}">Add a location</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('add_location') }}">Add a location</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="{{ url_for('all_locations') }}">All Locations</a></li>
           </ul>
