--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,11 @@
         {% for pc in pcs %}
 
             <div class="card" style="width: 18rem;">
-                <img src="/static/assets/pixel_{{ pc.name }}.png" class="card-img-top" alt="{{ pc.name }}">
+                <img src="/static/assets/pixel_{{ pc.name.lower() }}.png" class="card-img-top" alt="{{ pc.name }}">
                 <div class="card-body">
                     <h5 class="card-title">{{ pc.name }}</h5>
                     <p class="card-text">{{ pc.desc }}</p>
-                    <a href="{{ url_for('view_character', pc_id='{{ pc.name }}') }}" class="btn btn-primary">See info</a>
+                    <a href="{{ url_for('view_character', pc_id=pc.name) }}" class="btn btn-primary">See info</a>
                 </div>
             </div>
 
@@ -25,14 +25,14 @@
     {% if locations  %}
     <h3>Locations:</h3>
         {% for loc in locations %}
-            <a href="{{ url_for('location', loc_id=loc['id']) }}">
+            <a href="{{ url_for('location', loc_name=loc['name']) }}">
                 <h2>{{ loc['name'] }}</h2>
             </a>
             <span class="badge badge-primary">{{ loc['timestamp'] }}</span>
     {#        <a href="{{ url_for('edit_character', id=loc['id']) }}">#}
     {#            <span class="badge badge=warning">Edit</span>#}
     {#        </a>#}
-    {#        <hr>#}
+            <hr>
         {% endfor %}
     {% endif %}
 {% endblock %}
