--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
               <li><a class="dropdown-item" href="{{ url_for('bonk') }}">Most Recent</a></li>
-              <li><a class="dropdown-item" href="{{ url_for('create') }}">Create New Entry</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('add_entry') }}">Create New Entry</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="{{ url_for('all_entries') }}">All Entries</a></li>
           </ul>
