--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,22 @@
-h1 {
-    border: 2px #eee solid;
-    color: brown;
-    text-align: center;
-    padding: 10px;
+/*h1 {*/
+/*    border: 2px #eee solid;*/
+/*    color: brown;*/
+/*    text-align: center;*/
+/*    padding: 10px;*/
+/*}*/
+
+body {
+    background-image: url('../assets/brand/waterdeep.jpg');
+    background-color: #cccccc;
+    background-attachment: fixed;
+    background-position: center top;
+    background-size: cover;
+}
+
+.blockcontent {
+    background-color: white;
+    background-size: cover;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 50px;
 }
