--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,10 @@
 /*}*/
 
 body {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+
     background-image: url('../assets/brand/waterdeep.jpg');
     background-color: #cccccc;
     background-attachment: fixed;
@@ -13,10 +17,18 @@ body {
     background-size: cover;
 }
 
-.blockcontent {
+.Site-footer {
+    flex-shrink: 0;
+
+    padding: 20px;
+}
+
+.Site-content {
+    flex: 1 0 auto;
+
+    align-self: center;
     background-color: white;
-    background-size: cover;
-    padding-left: 100px;
-    padding-right: 100px;
-    padding-bottom: 50px;
+    /*background-size: cover;*/
+    margin: 10px;
+    padding: 10px 100px 50px;
 }
