--- a/templates/base.html
+++ b/templates/base.html
@@ -86,12 +86,16 @@
 </nav>
 
     {# TODO: adjust alert settings #}
-    <div class="container">
+    <div class="Site-content container">
         {% for message in get_flashed_messages() %}
             <div class="alert alert-danger">{{ message }}</div>
         {% endfor %}
-        <div class="blockcontent">{% block content %} {% endblock %}</div>
+        <div>{% block content %} {% endblock %}</div>
     </div>
+
+    <footer class="Site-footer bg-dark">
+        Glass Force
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
