--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../../static/css/char_page.css">
+
     <title>{% block title %} {% endblock %}</title>
   </head>
 
@@ -94,7 +96,7 @@
     </div>
 
     <footer class="Site-footer bg-dark">
-        Glass Force
+        <h3 class="footer-title">Glass Force</h3>
     </footer>
 
     <!-- Optional JavaScript -->
