fixed edit_character to work with Flask-Form

--- a/templates/characters/view_character.html
+++ b/templates/characters/view_character.html
@@ -44,8 +44,8 @@
                             <p>Class</p>
                         </div>
                         <div class="col">
-                            {% if character['class'] %}
-                                {{ character['class'] }}
+                            {% if character['char_class'] %}
+                                {{ character['char_class'] }}
                             {% endif %}
                         </div>
                     </div>
