--- a/react-front/src/index.css
+++ b/react-front/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-image: url('./Assets/brand/waterdeep.jpg');
+  background-color: #cccccc;
+  background-attachment: fixed;
+  background-position: center top;
+  background-size: cover;
 }
 
 code {
