--- a/react-front/src/App.css
+++ b/react-front/src/App.css
@@ -1,3 +1,43 @@
-.App {
+.site-nav {
+  position: fixed;
+  top: 0;
+  z-index: 20;
+  width: 100%;
 
+  box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.57);
+}
+
+.logo {
+  margin: 0px 15px 0 10px;
+}
+
+.content-container {
+  margin-top: 76px;
+  position: relative;
+}
+
+.charousel-container {
+  background-color: white;
+  padding: 50px;
+}
+
+.chard {
+  color: white;
+}
+.chard.container {
+  background-clip: padding-box;
+  background-color: #364050;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 5px;
+  width: 520px;
+  height: 700px;
+}
+
+.chard.title {
+  font-size: 20px;
+}
+
+.chard.desc {
+  font-size: 14px;
 }
