--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ url_for('index')}}">
-        <img src="/static/assets/brand/d&d_logo_amp.png" alt="" width="50" height="50" class="d-inline-block align-center">
+        <img src="{{ '../config.py'.basedir }}/static/assets/brand/d&d_logo_amp.png" alt="" width="50" height="50" class="d-inline-block align-center">
         Glass Force
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
