--- a/templates/base.html
+++ b/templates/base.html
@@ -14,78 +14,7 @@
   </head>
 
   <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('index')}}">
-            <img src="/static/assets/brand/d&d_logo_amp.png" alt="" width="50" height="50" class="d-inline-block align-center">
-            Glass Force
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-          <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('about') }}">About</a>
-              </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Characters
-              </a>
-              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-    {#              <li><a class="dropdown-item" href="{{ url_for('about') }}">Player Characters</a></li>#}
-                  <li><a class="dropdown-item" href="{{ url_for('add_character') }}">Add a character</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="{{ url_for('get_all_characters') }}">All Characters</a></li>
-              </ul>
-            </li>
-
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Locations
-              </a>
-              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                  <li><a class="dropdown-item" href="{{ url_for('bonk') }}">Trollskull Manor</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('bonk') }}">Yawning Maw</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('add_location') }}">Add a location</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="{{ url_for('all_locations') }}">All Locations</a></li>
-              </ul>
-            </li>
-
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Session Entries
-              </a>
-              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                  <li><a class="dropdown-item" href="{{ url_for('bonk') }}">Most Recent</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('add_entry') }}">Create New Entry</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="{{ url_for('all_entries') }}">All Entries</a></li>
-              </ul>
-            </li>
-          </ul>
-
-          <ul class="nav navbar-nav ml-auto">
-                {% if current_user.is_anonymous %}
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
-                {% else %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="{{ current_user.avatar(32) }}" alt="user img">
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item" href="{{ url_for('user', username=current_user.username) }}">Profile</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
-                        </ul>
-                    </li>
-                {% endif %}
-          </ul>
-
-        </div>
-      </div>
-    </nav>
+    {% include 'navbar.html' %}
 
     {# TODO: adjust alert settings #}
     <div class="Site-content container">
